reapplying r1903 from bill: Support split pane / layout pane resizing, full screen split pane / layout pane, split pane inside of split pane / layout pane. Note that the new testcases don't work correctly yet (Firefox even crashes sometimes) but I am checking them in as a goal.
reapplying r1094 from cal:
use content width for laying out children, rather than inner width which includes borders and padding.

reapplying r1095 from cal:
fixed the pane sizers overlapping on IE (needed to set the font-size to 1px - do we have a general fix for that?). added a border to one pane to show it's working

git-svn-id: http://svn.dojotoolkit.org/src@1905 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/trunk/src/widget/templates/HtmlSplitPane.css
+++ b/trunk/src/widget/templates/HtmlSplitPane.css
@@ -7,6 +7,7 @@
 
 .dojoHtmlSplitPaneSizerH {
 
+	font-size: 1px;
 	cursor: move;
 	cursor: w-resize;
 	background-color: #D4D0C8;
@@ -19,6 +20,7 @@
 
 .dojoHtmlSplitPaneSizerV {
 
+	font-size: 1px;
 	cursor: move;
 	cursor: n-resize;
 	background-color: #D4D0C8;
@@ -31,6 +33,7 @@
 
 .dojoHtmlSplitPaneVirtualSizerH {
 
+	font-size: 1px;
 	cursor: move;
 	cursor: w-resize;
 	background-color: #808080;
@@ -39,6 +42,7 @@
 
 .dojoHtmlSplitPaneVirtualSizerV {
 
+	font-size: 1px;
 	cursor: move;
 	cursor: n-resize;
 	background-color: #808080;
